# release_manager

./: .env.example  README.md  main.py  pyproject.toml
apps/: app.py  composition_root.py
apps/adapters/: gitlab.py
apps/entrypoints/: base.py  telegram.py
apps/services/: build_create.py
config/: settings.py
